syntax = "proto3";

package user.v1;

option go_package = "github.com/x-eight/BDD-golang/gen/proto/user/v1;userpb";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse) {}
}
